kubernetes/extensions/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-api-gateway
  namespace: monitoring
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    my-company.com/environment: development
    my-company.com/owner: albert
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: grafana.my-company.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
  ingressClassName: nginx
